--- a/package.xml
+++ b/package.xml
@@ -48,20 +48,19 @@
   <!--   <test_depend>gtest</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-   <build_export_depend>mavros</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>mavros</exec_depend>
+  <!-- Dependencies for building the package -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>mavros_msgs</build_depend>
 
+  <!-- Dependencies for building and exporting the package -->
+  <build_export_depend>mavros_msgs</build_export_depend>
 
+  <!-- Dependencies for running the package -->
+  <exec_depend>mavros_msgs</exec_depend>
+  
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
